tests/baselines/reference/parserInterfaceDeclaration7.errors.txt
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration7.ts(1,18): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration7.ts (1 errors) ====
    export interface I {
                     ~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    }